2006-01-14  Phil Blundell  <pb@reciva.com>

	* Makefile: Version 0.85 released.

2006-01-14  Phil Blundell  <pb@reciva.com>

	* gpe-login.sysconfig: Extract $HOME from /etc/passwd rather than
	guessing.

2006-01-05  Phil Blundell  <pb@reciva.com>

	* Version 0.84 released.

2006-01-05  Florian Boor <florian@kernelconcepts.de>

    * gpe-login.pre-session: Set device permissins for HTC smartphones.

2005-10-07  Florian Boor <florian@kernelconcepts.de>

    * Version 0.83 released.

2005-10-07  Rene Wagner <rw@handhelds.org>

	* gpe-login.session: Use correct gtkrc for gpe-login --autolock

2005-08-29  Florian Boor <florian@kernelconcepts.de>

    * Version 0.82 released.
    * gpe-login.pre-session: Update backlight device settings.
                             Manage access to framebuffer and tty.

2005-08-04  Florian Boor <florian@kernelconcepts.de>

    * Version 0.81 released.
    * locale.alias: Import new file from gdm with the help of Phil's awk
                    knowlege.
    * gpe-login.c: Improve fallback solution to support more situations.
                   Define DEBUG only if not already defined.    
    * Makefile: Add -Wall and a section to handle DEBUG.
    * gpe-login.c (locale_get_files): Introduce a fallback solution for 
                                      creating a locale list using locale.alias.
                  (locale_install_check): New function to guess if a locale is
                                          installed or not.
    * locale.alias: Don't comment out some locales, we have a different 
                    mechanism now.

2005-08-03  Florian Boor <florian@kernelconcepts.de>

	* Version 0.80 released.
	* X11/gpe-login.pre-session: Sorted sections by device type.
                                     Add Collie backlight and audio devices.

2005-08-31  Rene Wagner <rw@handhelds.org>

	* X11/gpe-login.pre-session: Apply pre-session-ramdisk.patch from OE.
	                             also check if /media/ram is available.
