@@ -1,0 +1,1 @@
+addgroups audio,video
